--- a/css/daju_about.css
+++ b/css/daju_about.css
@@ -38,7 +38,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 20px;
 }
+
 .about_title P {
   color: #ffffff;
 }
@@ -61,8 +63,6 @@ swiper-slide {
   align-items: center;
 }
 
-
-
 swiper-container {
   width: 100%;
   height: 100%;
@@ -76,7 +76,10 @@ swiper-wrapper {
   z-index: 1;
   display: flex;
   transition-property: transform;
-  transition-timing-function: var(--swiper-wrapper-transition-timing-function,initial);
+  transition-timing-function: var(
+    --swiper-wrapper-transition-timing-function,
+    initial
+  );
   box-sizing: content-box;
   align-items: flex-end;
 }
@@ -91,7 +94,6 @@ swiper-slide {
 }
 
 swiper-slide img {
-
   display: block;
   width: 100%;
   height: 100%;
@@ -99,9 +101,8 @@ swiper-slide img {
 }
 
 .swiper-wrapper {
-
 }
- 
+
 .slide_text {
   background-image: url(/images/slide_img.png);
   display: flex;
@@ -114,25 +115,15 @@ swiper-slide img {
   justify-content: center;
 }
 
-.slide_text p{
+.slide_text p {
   color: #002448;
   text-align: center;
 }
 
-
 /* 橫向滾動店家 */
-/* Inspired by this pen by Pieter Biesemans https://codepen.io/pieter-biesemans/pen/BQBWXX and My Mother Before Me project http://mymotherbeforeme.com/ */
 
-
-/* hide scrollbar */
-::-webkit-scrollbar {
-  width: 1px;
-  height: 1px;
-}
-
-::-webkit-scrollbar-button {
-  width: 1px;
-  height: 1px;
+body {
+  overflow-x: hidden;
 }
 .external {
   /* overflow: hidden; */
@@ -145,14 +136,14 @@ swiper-slide img {
   flex-direction: column;
   align-items: center;
   width: 100vh;
-  transform: rotate(-90deg) translate3d(0,-100vh,0);
+  transform: rotate(-90deg) translate3d(0, -100vh, 0);
   transform-origin: right top;
   overflow-y: auto;
   overflow-x: hidden;
   padding: 0;
   height: 100vw;
   perspective: 1px;
-	transform-style: preserve-3d;
+  transform-style: preserve-3d;
   padding-bottom: 10rem;
   box-sizing: border-box;
   background: #002448;
@@ -164,66 +155,152 @@ swiper-slide img {
   justify-content: center;
   min-height: 40vh;
   transform-origin: 50% 50%;
-  transform: rotate(90deg) translateZ(.1px) scale(0.9) translateX(0px) translateY(-3vh);
+  transform: rotate(90deg) translateZ(0.1px) scale(0.9) translateX(0px)
+    translateY(-3vh);
   transition: 1s;
 }
 
-.img-wrapper:hover {
+/* .img-wrapper:hover {
  min-height: 65vh;
-} 
+}  */
 
 .slower {
-  transform: rotate(90deg) translateZ(-.2px) scale(1.1) translateX(0%) translateY(-10vh);
+  transform: rotate(90deg) translateZ(-0.2px) scale(1.1) translateX(0%)
+    translateY(-10vh);
 }
 .slower1 {
-  transform: rotate(90deg) translateZ(-.25px) scale(1.05) translateX(0%) translateY(8vh);
+  transform: rotate(90deg) translateZ(-0.25px) scale(1.05) translateX(0%)
+    translateY(8vh);
 }
 .slower2 {
-  transform: rotate(90deg) translateZ(-.3px) scale(1.3) translateX(0%) translateY(2vh);
+  transform: rotate(90deg) translateZ(-0.3px) scale(1.3) translateX(35%)
+    translateY(-1vh);
 }
 .slower-down {
-  transform: rotate(90deg) translateZ(-.2px) scale(1.1) translateX(0%) translateY(16vh) ;
+  transform: rotate(90deg) translateZ(0) scale(1.1) translateX(27%)
+    translateY(10vh);
 }
 .faster {
-  transform: rotate(90deg) translateZ(.15px) scale(0.8) translateX(0%) translateY(14vh) ;
+  transform: rotate(90deg) translateZ(0.15px) scale(0.7) translateX(40%)
+    translateY(-10vh);
 }
 .faster1 {
-  transform: rotate(90deg) translateZ(.05px) scale(0.8) translateX(0%) translateY(10vh) ;
-}
-.fastest {
-  transform: rotate(90deg) translateZ(.22px) scale(0.7) translateX(-10vh) translateY(-15vh) ;
+  transform: rotate(90deg) translateZ(0.05px) scale(0.8) translateX(0%)
+    translateY(10vh);
 }
 .vertical {
-   transform: rotate(90deg) translateZ(-.15px) scale(1.15) translateX(0%) translateY(0%) ;
+  transform: rotate(90deg) translateZ(-0.15px) scale(1.15) translateX(0%)
+    translateY(0%);
 }
 .last {
-  transform: rotate(90deg) translateZ(-.2px) scale(1.1) translateX(25vh) translateY(-8vh) ;
+  transform: rotate(90deg) translateZ(-0.2px) scale(1.1) translateX(25vh)
+    translateY(-8vh);
 }
-
-
 
 .img-wrapper img {
   max-width: 45vh;
   max-height: 50vh;
-  transition: .5s;
+  transition: 0.5s;
   vertical-align: top;
+  border: 13px solid #fff;
 }
 
+.side-scroll__label {
+  display: flex;
+  z-index: 1;
+  position: relative;
+  top: 55%;
+  left: 0;
+  align-items: center;
+  width: 100%;
+  height: 53px;
+  padding-top: 9px;
+  overflow: hidden;
+  transform: translateY(-50%);
+  border-top: 0.5px solid #fff;
+  border-bottom: 0.5px solid #fff;
+  display: none;
+}
 
+.scroll_text {
+  display: block;
+  background-image: url(/images/scroll_text.svg);
+  min-width: 1200px;
+  margin: 0 5px;
+  height: 30px;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
 
+.side-scroll__image p {
+  color: #fff;
+  font-weight: bold;
+}
+
+.side-scroll__image {
+  width: 53%;
+  max-width: 302px;
+  width: 100%;
+  /* transform: rotate(8deg); */
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+}
+
+.footer_content {
+  background-color: #01162b;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 150px;
+  /* margin-top: 50px; */
+}
 
 /* RWD */
-@media only screen and (max-width: 1366px) {
-
-}
-
-@media only screen and (max-width: 1366px) {
+@media only screen and (max-width: 1660px) {
+  .content_about_block {
+    margin: auto;
+    /* margin-left: 7%; */
+    margin-top: -5%;
+    margin-bottom: 150px;
+    width: 77%;
+  }
 }
 
 @media only screen and (max-width: 1266px) {
 }
 
 @media only screen and (device-width: 1024px) and (device-height: 720px) {
+  .content_about_block {
+    margin-top: -7%;
+  }
+  .faster {
+    transform: rotate(90deg) translateZ(0.15px) scale(0.8) translateX(152%)
+      translateY(-12vh);
+  }
+
+  .faster1 {
+    transform: rotate(90deg) translateZ(0.05px) scale(0.8) translateX(160%)
+      translateY(10vh);
+  }
+  .vertical {
+    transform: rotate(90deg) translateZ(-0.15px) scale(1.15) translateX(147%)
+      translateY(4%);
+  }
+  .slower-down {
+    transform: rotate(90deg) translateZ(-0.2px) scale(1.1) translateX(100%)
+      translateY(16vh);
+  }
+
+  .last {
+    transform: rotate(90deg) translateZ(-0.2px) scale(1.1) translateX(81vh)
+      translateY(-8vh);
+  }
+  .slower1 {
+    transform: rotate(90deg) translateZ(-0.25px) scale(1.05) translateX(10%)
+      translateY(8vh);
+  }
 }
 
 @media only screen and (min-width: 768px) and (min-height: 1024px) {
@@ -236,4 +313,32 @@ swiper-slide img {
 }
 
 @media only screen and (max-width: 430px) {
+  .content_about_block {
+    margin: auto;
+    /* margin-left: 7%; */
+    margin-top: -15%;
+    margin-bottom: 150px;
+    width: 90%;
+  }
+  .slower-down {
+    transform: rotate(90deg) translateZ(0) scale(1.1) translateX(63%)
+      translateY(10vh);
+  }
+  .faster {
+    transform: rotate(90deg) translateZ(0.15px) scale(0.7) translateX(80%)
+      translateY(-10vh);
+  }
+  .faster1 {
+    transform: rotate(90deg) translateZ(0.05px) scale(0.8) translateX(32%)
+      translateY(10vh);
+  }
+  .vertical {
+    transform: rotate(90deg) translateZ(-0.15px) scale(1.15) translateX(31%)
+      translateY(0%);
+  }
+  .last {
+    transform: rotate(90deg) translateZ(-0.2px) scale(1.1) translateX(19vh)
+      translateY(-8vh);
+  }
+
 }
