--- a/css/daju_style.css
+++ b/css/daju_style.css
@@ -69,7 +69,7 @@ a {
   background: transparent;
 }
 ::-webkit-scrollbar-thumb {
-  background-color: #0e7fc5;
+  background-color: #002448;
   /* border-radius: 5px; */
 }
 ::-webkit-scrollbar-track {
@@ -100,6 +100,7 @@ a {
   width: 50%;
   margin-left: auto;
   border-radius: 30px 0px 0px 30px;
+  background: rgba(255, 255, 255, 0.97);
 }
 .navbar-expand-lg .navbar-nav .nav-link {
   padding: 0 1rem;
@@ -117,6 +118,150 @@ a {
   margin-top: 70px;
 }
 
+.header_content {
+  display: none;
+}
+
+
+
+/* 橫向滾動店家 */
+
+/* 橫向滾動店家 */
+
+body {
+  overflow-x: hidden;
+}
+.external {
+  /* overflow: hidden; */
+  height: 100vh;
+  margin-top: 100px;
+}
+
+.horizontal-scroll-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100vh;
+  transform: rotate(-90deg) translate3d(0, -100vh, 0);
+  transform-origin: right top;
+  overflow-y: auto;
+  overflow-x: hidden;
+  padding: 0;
+  height: 100vw;
+  perspective: 1px;
+  transform-style: preserve-3d;
+  padding-bottom: 10rem;
+  box-sizing: border-box;
+  background: #002448;
+}
+.img-wrapper {
+  transform: rotate(90deg);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 40vh;
+  transform-origin: 50% 50%;
+  transform: rotate(90deg) translateZ(0.1px) scale(0.9) translateX(0px)
+    translateY(-3vh);
+  transition: 1s;
+}
+
+/* .img-wrapper:hover {
+ min-height: 65vh;
+}  */
+
+.slower {
+  transform: rotate(90deg) translateZ(-0.2px) scale(1.1) translateX(0%)
+    translateY(-10vh);
+}
+.slower1 {
+  transform: rotate(90deg) translateZ(-0.25px) scale(1.05) translateX(0%)
+    translateY(8vh);
+}
+.slower2 {
+  transform: rotate(90deg) translateZ(-0.3px) scale(1.3) translateX(35%)
+    translateY(-1vh);
+}
+.slower-down {
+  transform: rotate(90deg) translateZ(0) scale(1.1) translateX(27%)
+    translateY(10vh);
+}
+.faster {
+  transform: rotate(90deg) translateZ(0.15px) scale(0.7) translateX(40%)
+    translateY(-10vh);
+}
+.faster1 {
+  transform: rotate(90deg) translateZ(0.05px) scale(0.8) translateX(0%)
+    translateY(10vh);
+}
+.vertical {
+  transform: rotate(90deg) translateZ(-0.15px) scale(1.15) translateX(0%)
+    translateY(0%);
+}
+.last {
+  transform: rotate(90deg) translateZ(-0.2px) scale(1.1) translateX(25vh)
+    translateY(-8vh);
+}
+
+.img-wrapper img {
+  max-width: 45vh;
+  max-height: 50vh;
+  transition: 0.5s;
+  vertical-align: top;
+  border: 13px solid #fff;
+}
+
+.side-scroll__label {
+  display: flex;
+  z-index: 1;
+  position: relative;
+  top: 55%;
+  left: 0;
+  align-items: center;
+  width: 100%;
+  height: 53px;
+  padding-top: 9px;
+  overflow: hidden;
+  transform: translateY(-50%);
+  border-top: 0.5px solid #fff;
+  border-bottom: 0.5px solid #fff;
+  display: none;
+}
+
+.scroll_text {
+  display: block;
+  background-image: url(/images/scroll_text.svg);
+  min-width: 1200px;
+  margin: 0 5px;
+  height: 30px;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.side-scroll__image p {
+  color: #fff;
+  font-weight: bold;
+}
+
+.side-scroll__image {
+  width: 53%;
+  max-width: 302px;
+  width: 100%;
+  /* transform: rotate(8deg); */
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+}
+
+.footer_content {
+  background-color: #01162b;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 150px;
+  /* margin-top: 50px; */
+}
 /*-----------------footer-------------- */
 .footer_content {
   background-color: #01162b;
@@ -151,7 +296,7 @@ footer h4 {
   }
 }
 
-@media only screen and (max-width: 1366px){
+@media only screen and (max-width: 1366px) {
   .navbar {
     width: 60%;
   }
@@ -182,6 +327,8 @@ footer h4 {
     width: 100%;
     margin-left: auto;
     border-radius: 20px;
+    background: rgba(255, 255, 255, 0.97);
+    z-index: 6;
   }
 
   .navbar-nav {
@@ -191,6 +338,14 @@ footer h4 {
     margin-bottom: 0;
     list-style: none;
     gap: 20px;
+  }
+  .media_icon {
+    display: none;
+}
+
+  .navbar-light .navbar-toggler {
+    color: transparent;
+    border-color: transparent;
   }
 
   .nav-item {
@@ -210,7 +365,21 @@ footer h4 {
 
   footer h4 {
     font-size: 20px;
-}
+  }
+
+  .header_content {
+    display: flex;
+    margin: 30px 0;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+  }
+
+  .header_media_icon {
+    display: flex;
+    gap: 30px;
+  }
+
 }
 @media only screen and (min-width: 1000px) {
 }
