--- a/css/daju_bridge.css
+++ b/css/daju_bridge.css
@@ -95,11 +95,16 @@
     width: 60%;
   }
   
-  .introduce_text h1,
-  h5 {
+  .introduce_text h1, h5 {
     color: #ffffff;
-    letter-spacing: 11px;
+    letter-spacing: 6.9px;
+    line-height: 1.4;
   }
+  
+  .introduce_text h5{
+    font-weight: normal;
+    font-size: 18px;
+}
   
   .introduce_text h1 {
     text-align: center;
@@ -223,5 +228,10 @@
       padding: 30px;
       width: 90%;
     }
+    .content_about {
+      width: 90%;
+      padding: 20px;
+      margin-top: -85px;
+  }
   }
   
