--- a/css/daju_style.css
+++ b/css/daju_style.css
@@ -215,28 +215,38 @@ body {
   display: flex;
   z-index: 1;
   position: relative;
-  top: 55%;
-  left: 0;
+  top: 50%;
+  left: 0px;
   align-items: center;
-  width: 100%;
-  height: 53px;
-  padding-top: 9px;
-  overflow: hidden;
-  transform: translateY(-50%);
-  border-top: 0.5px solid #fff;
-  border-bottom: 0.5px solid #fff;
+  height: 83px;
+  padding: 8px;
+  border-top: 0.5px solid rgb(255, 255, 255);
+  border-bottom: 0.5px solid rgb(255, 255, 255);
+  transform: rotate(90deg);
+  /* width: 100vw; */
+  /* transform-origin: 50% 50%; */
+  /* overflow: hidden; */
   display: none;
 }
 
 .scroll_text {
   display: block;
-  background-image: url(/images/scroll_text.svg);
+  background-image: url(https://w.tw.mawebcenters.com/0970018110/image/scroll_text.svg);
   min-width: 1200px;
   margin: 0 5px;
-  height: 30px;
+  margin-top: 9px;
+  height: 31px;
   background-size: contain;
   background-repeat: no-repeat;
+  color: #fff;
+  transform: rotate(0deg);
+  /* width: 100%; */
+  display: none;
 }
+
+/* .scroll5 , .scroll6 , .scroll7{
+  display: none;
+} */
 
 .side-scroll__image p {
   color: #fff;
@@ -287,12 +297,19 @@ footer h4 {
 }
 
 /* RWD */
+
+@media only screen and (max-width: 1700px) {
+}
+
 @media only screen and (max-width: 1475px) {
   .navbar-light .navbar-nav .nav-link {
     font-size: 18px;
   }
   .navbar {
     width: 60%;
+  }
+  .header_content h4{
+    font-size: 18px;
   }
 }
 
@@ -383,13 +400,13 @@ footer h4 {
 }
 @media only screen and (min-width: 1000px) {
 }
-@media only screen and (max-width: 769px) {
+@media only screen and (max-width: 830px) {
   .footer_content {
     flex-direction: column;
   }
   .top_banner {
-    height: 400px;
-    border-radius: 0 0 70px 70px;
+    height: 300px;
+    border-radius: 0 0 100px 100px;
   }
 }
 @media only screen and (min-width: 768px) and (min-height: 1024px) {
