--- a/css/daju_index.css
+++ b/css/daju_index.css
@@ -25,7 +25,7 @@
 /* ------------section-------------- */
 .lane_block,
 .bridge_block,
-.markrt_block {
+.market_block {
   display: none;
 }
 
@@ -260,6 +260,7 @@
   }
   .carousel-item img {
   height: 300px;
+  border-radius: 0 0 100px 100px;
   }
 }
 
@@ -290,6 +291,7 @@
 @media only screen and (max-width: 560px) {
   .switch_link {
     width: 85%;
+    margin-top: 100px;
   }
   .content_img img {
     width: 410px;
@@ -297,6 +299,7 @@
   }
   .carousel-item img {
     height: 300px;
+    border-radius: 0 0 100px 100px;
 }
 
   /* 将轮播图图片的路径更改为适合小屏幕的图片 */
@@ -327,4 +330,8 @@
   .index_banner {
     border-radius: 0 0 80px 80px;
   }
+  .carousel-item img {
+    height: 300px;
+    border-radius: 0 0 80px 80px;
+}
 }
