--- a/css/daju_market_media.css
+++ b/css/daju_market_media.css
@@ -64,6 +64,8 @@
   flex-wrap: wrap;
   gap: 30px;
   justify-content: center;
+  max-width: 1800px;
+  margin: 0 auto;
   margin-bottom: 70px;
 }
 
